--- a/app/src/main/res/layout/academic_calendar_recycle.xml
+++ b/app/src/main/res/layout/academic_calendar_recycle.xml
@@ -1,41 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="8dp"
     app:style="@style/CardView"
-    android:animateLayoutChanges="true" >
+    android:animateLayoutChanges="true">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
-    <LinearLayout
+    <com.balysv.materialripple.MaterialRippleLayout
+        android:id="@+id/ripple"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="16dp"
-        android:orientation="vertical" >
+        android:layout_height="wrap_content"
+        app:mrl_rippleOverlay="true"
+        app:mrl_rippleColor="#585858"
+        app:mrl_rippleAlpha="0.2"
+        app:mrl_rippleDelayClick="false"
+        app:mrl_rippleHover="true"
+        app:mrl_rippleInAdapter="true">
 
-        <TextView
-            android:id="@+id/term"
-            style="@style/CardTitle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-
-        <TableLayout
-            android:id="@+id/table_layout"
-            android:layout_width="fill_parent"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:id="@+id/layout_cover"
+            android:clickable="true"
             android:layout_height="wrap_content"
-            android:paddingTop="16dp"/>
+            android:background="?android:attr/selectableItemBackground">
 
-        </LinearLayout>
+            <ImageView
+                android:layout_width="100dp"
+                android:id="@+id/card_image_view_top"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:elevation="8dp"
+                android:background="@drawable/drawer_shadow"
+                android:layout_margin="3dp"
+                android:layout_height="140dp" />
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/card_image_view_top"
+                android:layout_alignParentTop="true"
+                android:paddingLeft="10dp"
+                android:layout_toRightOf="@id/card_image_view_top"
+                android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:text="Winter"
+                    style="@style/SingleLineListTextOnly"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="5dp"
+                    android:id="@+id/tv_calendar_session" />
 
-    </LinearLayout>
+                <include
+                    layout="@layout/card_divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/layout_container"></LinearLayout>
+            </LinearLayout>
+
+        </RelativeLayout>
+    </com.balysv.materialripple.MaterialRippleLayout>
 </android.support.v7.widget.CardView>
