--- a/app/src/main/res/layout/buildings_recycle.xml
+++ b/app/src/main/res/layout/buildings_recycle.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:orientation="vertical"
-    style="@style/CardView">
+    android:layout_margin="-10dp"
+    android:padding="-10dp"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -30,14 +30,6 @@
 
         </FrameLayout>
 
-        <TextView
-            android:id="@+id/building_description"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:textColor="@color/primary_text_default_material_light"
-            android:textSize="@dimen/abc_text_size_body_1_material" />
-
         <include layout="@layout/card_divider" />
 
         <LinearLayout
@@ -48,23 +40,19 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/read_more_button"
-                style="@style/MaterialButtonFlat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/secondary_text_default_material_light"
-                android:text="@string/read_more"/>
-
-            <Button
                 android:id="@+id/mapit_button"
                 style="@style/MaterialButtonFlat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/main00"
-                android:text="@string/map_it"/>
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:text="@string/map_it" />
 
         </LinearLayout>
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
