--- a/app/src/main/res/layout/calendar_detail.xml
+++ b/app/src/main/res/layout/calendar_detail.xml
@@ -6,6 +6,7 @@
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        />
 
 </LinearLayout>
