--- a/app/src/main/res/layout/help_and_feedback.xml
+++ b/app/src/main/res/layout/help_and_feedback.xml
@@ -1,58 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="2dp"
         style="@style/CardView">
-        <LinearLayout
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp"
-            android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/secondary_text_default_material_light"
-            android:text="Help"
-            android:textSize="20dp"/>
+            android:layout_height="match_parent">
 
-        <ExpandableListView
-            android:id="@+id/help_feedback_lvHelp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:groupIndicator="@null"
-            android:dividerHeight="1dp"
-            android:divider="@drawable/listview_divider"
-            android:childDivider="@android:color/transparent"/>
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:layout_alignParentTop="true"
+                android:id="@+id/layout_under_search"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_action_next_item" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/secondary_text_default_material_light"
+                        android:text="Help"
+                        android:textSize="20dp" />
+                </LinearLayout>
+
+                <ExpandableListView
+                    android:id="@+id/help_feedback_lvHelp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:groupIndicator="@null"
+                    android:descendantFocusability="blocksDescendants"
+                    android:dividerHeight="1dp"
+                    android:divider="@null"
+                    android:childDivider="@android:color/transparent" />
+            </LinearLayout>
+
+            <include
+                layout="@layout/card_divider"
+                android:layout_width="match_parent"
+                android:layout_above="@+id/layout_feedBack"
+                android:layout_height="1dp"
+                android:layout_marginBottom="5dp" />
+
+            <LinearLayout
+                android:id="@+id/layout_feedBack"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:layout_below="@id/layout_under_search">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_action_feedback" />
+
+                <TextView
+                    android:id="@+id/tvSendFeedBack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/secondary_text_default_material_light"
+                    android:text="Feed Back"
+                    android:textSize="20dp" />
+            </LinearLayout>
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view1"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        style="@style/CardView">
-
-    <LinearLayout
-        android:id="@+id/llFeedBack"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp">
-        <TextView
-            android:id="@+id/tvSendFeedBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/secondary_text_default_material_light"
-            android:text="Feed Back"
-            android:textSize="20dp"/>
-    </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+</FrameLayout>
