--- a/app/src/main/res/layout/helper_group.xml
+++ b/app/src/main/res/layout/helper_group.xml
@@ -1,21 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+<com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
+    android:id="@+id/ripple"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:background="@drawable/ic_action_expand"/>
+    app:mrl_rippleOverlay="true"
+    app:mrl_rippleColor="#585858"
+    app:mrl_rippleAlpha="0.2"
+    app:mrl_rippleDelayClick="false"
+    app:mrl_rippleHover="true"
+    app:mrl_rippleInAdapter="true">
 
-    <TextView
-        android:id="@+id/helper_group_tvQuestion"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:textColor="@color/primary_dark_material_dark"
-        android:text="Question here"
-        android:paddingLeft="20dp"/>
+        android:padding="5dp">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/img_group"
+            android:layout_width="wrap_content"
+            android:scaleType="center"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:background="@drawable/help_circle" />
+
+        <TextView
+            android:id="@+id/helper_group_tvQuestion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/primary_dark_material_dark"
+            android:text="Question here"
+            android:paddingLeft="10dp" />
+
+    </LinearLayout>
+</com.balysv.materialripple.MaterialRippleLayout>
