--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,10 @@
     <dimen name="medium_toolbar">112dp</dimen>
     <dimen name="toolbar_elevation">4dp</dimen>
 
+    <!-- Native card margin -->
+    <dimen name="card_default_native_margin_top">12dp</dimen>
+    <dimen name="card_default_native_margin_bottom">12dp</dimen>
+    <dimen name="card_default_native_margin_left">8dp</dimen>
+    <dimen name="card_default_native_margin_right">8dp</dimen>
+
 </resources>
