--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -10,8 +10,7 @@
     <com.techhab.collegeapp.TouchInterceptionFrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black">
+        android:layout_height="match_parent" >
 
         <LinearLayout
             android:id="@+id/header"
