--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -3,9 +3,10 @@
     xmlns:card="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
 
-    <it.gmariotti.cardslib.library.recyclerview.view.CardRecyclerView
+    <com.techhab.collegeapp.ObservableScrollCardRecylerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         style="@style/card_expand"
