--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -54,4 +54,10 @@
     <dimen name="sliding_slop">32dp</dimen>
     <dimen name="sliding_overlay_blur_size">4dp</dimen>
 
+    <!--Styles for image padding -->
+    <dimen name="card_main_content_native_default_paddingLeft">0dp</dimen>
+    <dimen name="card_main_content_native_default_paddingRight">0dp</dimen>
+    <dimen name="card_main_content_native_default_paddingTop">0dp</dimen>
+    <dimen name="card_main_content_native_default_paddingBottom">0dp</dimen>
+
 </resources>
