--- a/app/src/main/res/layout/activity_campus.xml
+++ b/app/src/main/res/layout/activity_campus.xml
@@ -1,66 +1,27 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:id="@+id/drawer_layout"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:fitsSystemWindows="true">
-
-<LinearLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true">
 
-    <FrameLayout
-        android:id="@+id/header"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/kzooOrange">
-        <!--android:background="@drawable/shadow">-->
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/abc_action_bar_default_height_material"
-            android:minHeight="@dimen/abc_action_bar_default_height_material"
-            app:theme="@style/Toolbar"
-            app:popupTheme="@style/Theme.AppCompat.Light" />
-
-
-        <com.techhab.collegeapp.SlidingTabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_gravity="bottom"
-            android:scrollbars="none"
-            android:fillViewport="true"
-            android:layout_marginTop="82dp"
-            app:pstsPaddingMiddle="false"
-            app:pstsShouldExpand="true" />
-
-    </FrameLayout>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        tools:context=".FoodActivity"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <include
+            layout="@layout/view_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-</LinearLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            tools:context=".FoodActivity" />
 
-<include layout="@layout/navigation_drawer" />
+    </LinearLayout>
 
-<!--<ListView
-    android:id="@+id/listview_drawer"
-    android:layout_width="260dp"
-    android:layout_height="match_parent"
-    android:divider="@null"
-    android:layout_gravity="start"
-    android:descendantFocusability="blocksDescendants"
-    android:background="@android:color/background_light"
-    android:choiceMode="singleChoice" />-->
-
+    <include layout="@layout/navigation_drawer" />
 </android.support.v4.widget.DrawerLayout>
