--- a/app/src/main/res/layout/fragment_campus_buildings.xml
+++ b/app/src/main/res/layout/fragment_campus_buildings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <it.gmariotti.cardslib.library.recyclerview.view.CardRecyclerView
+    <com.techhab.collegeapp.ObservableScrollCardRecylerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         style="@style/card_expand"
