fixed events observableScrollview
fixed events observableScrollview

--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -6,51 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.techhab.collegeapp.EventsActivity">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
+        <include
+            layout="@layout/view_header"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
-            tools:context="com.techhab.collegeapp.EventsActivity" />
-
-        <LinearLayout
-            android:id="@+id/header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/kzooOrange"
-            android:orientation="vertical">
-
-            <FrameLayout
-                android:id="@+id/toolbar_and_gender_switch"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
-
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:animateLayoutChanges="true"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/abc_action_bar_default_height_material"
-                    android:minHeight="@dimen/abc_action_bar_default_height_material"
-                    app:theme="@style/Toolbar"
-                    app:popupTheme="@style/Theme.AppCompat.Light" />
-
-            </FrameLayout>
-
-            <com.techhab.collegeapp.SlidingTabLayout
-                android:id="@+id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_gravity="bottom"
-                android:scrollbars="none"
-                android:fillViewport="true"
-                android:clipToPadding="false"
-                app:pstsPaddingMiddle="true" />
-
-        </LinearLayout>
+            android:layout_height="wrap_content" />
 
         <com.techhab.kcollegecustomviews.ProgressBar
             android:id="@+id/progress_bar"
@@ -58,17 +22,17 @@
             android:layout_height="wrap_content"
             android:paddingTop="16dp"
             android:paddingBottom="16dp"
-            android:layout_gravity="center" />
+            android:gravity="center|center_vertical" />
 
-    </FrameLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            tools:context=".FoodActivity" />
 
 
-    <!--Navigation Drawer-->
-    <fragment
-        android:id="@+id/home_navigation_drawer"
-        style="@style/NavDrawer"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:name="com.techhab.collegeapp.NavigationDrawerFragment" />
+    </LinearLayout>
+
+    <include layout="@layout/navigation_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
