--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:paddingBottom="8dp"
             android:textColor="@color/white"
-            android:text="Griffin Smalley"
+            android:text="John Doe"
             android:textSize="@dimen/abc_text_size_headline_material"/>
 
         <TextView
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:text="k13gs03@kzoo.edu"
+            android:text="k11jd01@kzoo.edu"
             android:paddingBottom="8dp"
             android:textSize="@dimen/abc_text_size_subhead_material"/>
 
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/abc_text_size_subhead_material"
             android:textColor="@color/white"
-            android:text="ID Number: 381341"/>
+            android:text="ID Number: 123456"/>
 
     </LinearLayout>
 
